# django-graphql-be

./: .envrc  .gitignore  .mypy.ini  .pre-commit-config.yaml  .style.yapf  .tool-versions  README.md  manage.py  pyproject.toml  renovate.json  requirements.txt
.github/workflows/: tests.yml
api/: admin.py  constants.py  models.py  query.py  schema.py
api/fixtures/: default.json
api/migrations/: 0001_initial.py  0002_auto_20220315_1606.py
api/tests/: conftest.py  test_hello.py  test_models.py  test_query.py  test_schema.py
api/tests/data/: default.json  test_data.json
api/tests/snapshots/: snap_test_hello.py  snap_test_query.py  snap_test_schema.py
docs/: Invoke.md  Poetry Tips and Tricks.md  Python Best Practices.md  Typing with MyPy.md
docs/adrs/: BE-001 GitHub Collaboration Practices.md  BE-002 Backend Framework is Python and Django.md  BE-003 API Structure is GraphQL.md  BE-004 Backend Unit Testing using PyTest.md  BE-005 Backend Integration Testing using PyTest.md  BE-006 Datastore is a PostgreSQL db.md  BE-007 Use Docker to containerize the app.md  BE-008 Task runner is PyInvoke.md  BE-009 Use mypy for type safety in the backend.md  BE-010 Backend Code Formatter is Yapf.md  BE-011 Python version manager.md  BE-012 Python dependency and environment manager.md  BE-013 Structured Logging.md
server/: log.py  logging.py  manage.py  settings.py  urls.py
server/api/: schema.py
server/api/tests/: test_hello.py
server/api/tests/snapshots/: snap_test_hello.py
server/app/: settings.py  urls.py
sith_django/: setup.cfg
sith_django/app/: settings.py  urls.py
stubs/: invoke.pyi  sqlparse.pyi  stringcase.pyi
stubs/graphene_django/: __init__.pyi  views.pyi
stubs/graphene_django/utils/: testing.pyi
stubs/snapshottest/: __init__.pyi  pytest.pyi
tasks/: __init__.py  build.py  common.py  db.py  logging.py
