[tool.poetry]
name = "sith-be"
version = "0.1.0"
description = ""
authors = ["Your Name <you@example.com>"]

[tool.poetry.dependencies]
python = "^3.9"
django-stubs = "1.13.1"
Django = "4.1.5"
graphene-stubs = "0.15"
graphene-django = "2.15.0"
invoke = "1.7.3"
mypy-extensions = "0.4.3"
psycopg2 = "2.9.5"
sqlparse = "0.4.3"
toml = "0.10.2"
types-pytz = "2021.3.8"
types-PyYAML = "6.0.12.2"
typing-extensions = "4.4.0"
django-cors-headers = "3.13.0"
pytest-django = "^4.5.2"
snapshottest = "^0.6.0"
pre-commit = "^2.16.0"
django-debug-toolbar = "^3.2.4"
django-graphiql-debug-toolbar = "^0.2.0"
stringcase = "^1.2.0"

[tool.poetry.dev-dependencies]
lxml = "^4.9.1"
yapf = "^0.32.0"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"

[tool.pytest.ini_options]
DJANGO_SETTINGS_MODULE = "server.settings"
minversion = "6.0"
python_files = [
    "tests.py",
    "test_*.py",
    "*_tests.py",
]

[tool.yapfignore]
ignore_patterns = [
  "**/snapshots/snap*.py",
  "**/migrations/*.py"
]
